updated events view

--- a/_config.yml
+++ b/_config.yml
@@ -36,6 +36,11 @@ theme: minima
 plugins:
   - jekyll-feed
 
+show_excerpts: true
+
+# Show _posts with dates in the future
+future: true
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
