Update index.md for minor changes

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: HPC-ED
 email: hpc.edu.train@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Cybertraining materials abound, but they can be difficult to find, and
+  CyberTraining materials abound, but they can be difficult to find, and
   often have little information about the quality or relevance of offerings.
   Using existing software technology, the HPC ED Pilot project team will
   build a platform for the community to better share and find training
